[package]
name = "databroker-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true, features = ["transport", "channel", "codegen", "prost"] }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["transport", "prost"] }
protobuf-src = "1.1.0"